# ChemFetch

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  app.json  directory.md  milestone.md  mypy.ini  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
app/: _layout.tsx  index.tsx  scan.tsx
app/register/: [id].tsx
docker/: docker-compose.yml
src/chemfetch/api/: main.py
src/chemfetch/api/routes/: products.py
src/chemfetch/db/: session.py
src/chemfetch/db/alembic/: env.py
src/chemfetch/db/alembic/versions/: 17aa8a1ed337_create_product_and_sds_tables.py
src/chemfetch/models/: __init__.py  product.py  sds_document.py
src/chemfetch/tasks/: app.py  demo.py  fetch_sds.py
src/lib/: api.ts
src/schemas/: sds.ts
