[project]
name = "chemfetch"
version = "0.1.0"
description = "Automated SDS register"
authors = [
    { name = "Sav", email = "maidenfan78@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "sqlalchemy (==2.*)",
    "alembic (>=1.16.4,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "psycopg[binary] (>=3.2.9,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Add this section:
[tool.poetry]
packages = [{ include = "chemfetch", from = "src" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.4"
mypy = "^1.17.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
httpx = "^0.28.1"
pre-commit = "^4.2.0"
